--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+
 body {
     gap: 15px;
     margin: 0;
     padding: 10px;
     width: 300px;
+    font-family: 'Playfair Display', serif;
+    color: #444444;
 }
 
 button {
@@ -14,8 +18,27 @@ h1 {
     margin: 0;
 }
 
+header {
+    z-index: 1;
+}
+
+main {
+    z-index: 1;
+}
+
 form {
     gap: 10px;
+}
+
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("images/bg.jpg");
+    background-size: 100% 100%;
+    opacity: 0.25;
 }
 
 .fc {
@@ -25,6 +48,14 @@ form {
 
 .error {
     color: red;
+}
+
+#calendar {
+    width: 70px;
+}
+
+#dollars {
+    width: 140px;
 }
 
 #subheader {
