--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
 
 body {
     gap: 15px;
     margin: 0;
     padding: 10px;
     width: 300px;
-    font-family: 'Playfair Display', serif;
+    font-family: 'PT Serif', serif;
     color: #444444;
 }
 
@@ -24,6 +24,10 @@ h1 {
 
 header {
     z-index: 1;
+}
+
+input {
+    font-family: 'PT Serif', serif;
 }
 
 main {
@@ -47,6 +51,9 @@ form {
 
 .copy-btn {
     display: none;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
 }
 
 .fc {
@@ -80,6 +87,7 @@ form {
     padding: 10px 5px;
     border-radius: 5px;
     background-color: white;
+    font-size: 1.25em;
 }
 
 #subheader {
