--- a/style.css
+++ b/style.css
@@ -52,8 +52,18 @@ form {
 .copy-btn {
     display: none;
     background-color: transparent;
-    background-repeat: no-repeat;
     border: none;
+    padding: 10px;
+}
+
+.copy-btn:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+}
+
+.copy-btn:active {
+    background-color: rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
 }
 
 .fc {
@@ -84,7 +94,6 @@ form {
 
 #result {
     align-items: center;
-    padding: 10px 5px;
     border-radius: 5px;
     background-color: white;
     font-size: 1.25em;
@@ -94,4 +103,9 @@ form {
     display: block;
     width: 100%;
     text-align: center;
+}
+
+#text {
+    padding: 10px 0;
+    padding-left: 5px;
 }
