--- a/style.css
+++ b/style.css
@@ -29,6 +29,15 @@ header {
 
 input {
     font-family: 'PT Serif', serif;
+    border-radius: 5px;
+    border: 2px solid grey;
+    padding: 3px;
+    outline: none;
+    transition: 0.25s;
+}
+
+input:focus {
+    border: 2px solid #3e9c35;
 }
 
 main {
@@ -47,7 +56,7 @@ form {
     height: 100%;
     background-image: url("images/bg.jpg");
     background-size: 100% 100%;
-    opacity: 0.25;
+    opacity: 0.2;
 }
 
 .copy-btn {
@@ -86,11 +95,11 @@ form {
 }
 
 #calendar {
-    width: 70px;
+    width: 72px;
 }
 
 #dollars {
-    width: 140px;
+    width: 142px;
 }
 
 #result {
