--- a/style.css
+++ b/style.css
@@ -64,15 +64,16 @@ form {
     background-color: transparent;
     border: none;
     padding: 10px;
+    transition: 0.2s;
 }
 
 .copy-btn:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: #3e9c351A;
     border-radius: 20px;
 }
 
 .copy-btn:active {
-    background-color: rgba(0, 0, 0, 0.25);
+    background-color: #3e9c3540;
     border-radius: 20px;
 }
 
